fix visual bug with profilepicture overlapping with border
GG 2 Minutes bugfixing

--- a/assets/css/global/components/profilecomponent.scss
+++ b/assets/css/global/components/profilecomponent.scss
@@ -12,18 +12,13 @@
             align-self: center;
             width: 7rem;
             height: 7rem;
-
-            > img {
-                display: block;
+            border-radius: 75%;
+            display: block;
                 object-fit: cover;
-                border-radius: 75%;
                 border: solid 5px var(--color);
                 padding: 3px;
                 max-width: 100%;
                 max-height: 100%;
-                // height: 7rem;
-                // width: 7rem;
-            }
         }
         &__username {
             font-weight: bold;
